fix: Change z-index of the Account page menu so that it is on top of the alert screen modal overlay

--- a/packages/fether-react/src/assets/sass/components/_popup.scss
+++ b/packages/fether-react/src/assets/sass/components/_popup.scss
@@ -19,6 +19,7 @@
   max-height: 220px;
   padding: 0px !important; /* Allow menu items to take up full width*/
   top: 3px !important;
+  z-index: 3000 !important; /* Above the alert screen modal */
 
   .popup-screen {
     margin-top: 5px;
